<resources>
    <string name="app_name">9-Dragon Go</string>
    <string name="nine_dragon_scroll_description">Nine Dragon Scroll</string>
    <string name="board_size">Board size:</string>
    <string name="nine">9</string>
    <string name="thirteen">13</string>
    <string name="nineteen">19</string>
    <string name="handicap">Handicap:</string>
    <string name="undo_button">Undo</string>
    <string name="redo_button">Redo</string>
    <string name="pass_button">Pass</string>
    <string name="reset_button">Quit</string>
    <string name="no_moves_to_undo">No moves to undo</string>
    <string name="no_future_to_redo">No moves to redo</string>
    <string name="undo_white">White\'s move undone</string>
    <string name="undo_black">Black\'s move undone</string>
    <string name="pass_white">White passes</string>
    <string name="pass_black">Black passes</string>
    <string name="reset">Game reset!</string>
    <string name="game_over">Game over!</string>
    <string name="cancel">Cancel</string>
    <string name="new_game">New Game</string>
    <string name="quit">Save \u0026 Quit</string>
    <string name="application_error">Error in the application!</string>
    <string name="no_suicide">Disallowed: no suicide</string>
</resources>
