<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/nine_dragon_scroll_description"
        android:src="@drawable/nine_dragons_scroll_04"/>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="40">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/board_size" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:gravity="center">
                <RadioGroup
                    android:id="@+id/board_size_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:checkedButton="@+id/board_size_radio_9">
                    <RadioButton
                        android:id="@id/board_size_radio_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nine"
                        android:onClick="onBoardSizeRadioClicked"/>
                    <RadioButton
                        android:id="@+id/board_size_radio_13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thirteen"
                        android:onClick="onBoardSizeRadioClicked"/>
                    <RadioButton
                        android:id="@+id/board_size_radio_19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nineteen"
                        android:onClick="onBoardSizeRadioClicked"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="30">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/handicap"/>
            <Spinner
                android:id="@+id/handicap_spinner"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"/>
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:src="@drawable/white_go_button"
            style="?android:attr/borderlessButtonStyle"
            android:onClick="onGoClicked"/>
        <!-- ### -->
    </LinearLayout>
</FrameLayout>


